workspace.members = ["src/camellia", "src/config", "src/env", "tests/try-env"]
workspace.resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Landmap Team", "Ryan Martin <eqpoqpe@gmail.com>"]
include = ["build.rs", "src/**/*", "Cargo.toml", "LICENSE*", "README.md"]
homepage = "https://github.com/eqpoqpe/camellia"
repository = "https://github.com/eqpoqpe/camellia"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = "0.15.13"
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
openidconnect = "4.0.1"
anyhow = "1.0.98"
base64 = "0.22"
tracing = "0.1"
