workspace.members = ["src/camellia", "src/config", "src/env"]
workspace.resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Landmap Team", "Ryan Martin <eqpoqpe@gmail.com>"]
include = ["build.rs", "src/**/*", "Cargo.toml", "LICENSE*", "README.md"]
homepage = "https://github.com/eqpoqpe/camellia"
repository = "https://github.com/eqpoqpe/camellia"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = "0.15.13"
