[package]
name = "camellia-config-ext"
edition.workspace = true
version = "0.0.1-alpha.1"
license.workspace = true
authors.workspace = true
include.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
config = { workspace = true }
serde = { workspace = true }
camellia-env = { path = "../env", version = "0.0.1-alpha.2" }
